--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
             quisquam?
           </p>
         </div>
-        <div class="main__block right"></div>
+        <div class="main__block right">
+          <img src="./img/main-cooker-update.png" alt="" />
+        </div>
       </div>
     </header>
     <section class="menu">
       <nav class="menu__nav">
         <div class="container">
-          <h2 class="menu__nav--delivery">Наше меню:</h2>
+          <!-- <h2 class="menu__nav--delivery">Наше меню:</h2> -->
           <ul class="menu__nav--list list">
             <li class="list__link"><a href="#pizza">Пиццы</a></li>
             <li class="list__link"><a href="#burger">Бургеры</a></li>
@@ -166,6 +168,11 @@
         <div class="menu__box box">
           <div class="box__wrapper">
             <img src="./img/pizza.png" alt="pizza" class="box__wrapper--img" />
+            <img
+              class="box__wrapper--pepper"
+              src=".//img/pepper.png"
+              alt="острая"
+            />
             <h3 class="box__wrapper--title">Четыре сезона</h3>
             <p class="box__wrapper--text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores,
