--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
             <li class="list__link"><a href="#">Напитки</a></li>
             <li class="list__link"><a href="#">Кухня</a></li>
           </ul>
-          <h2 class="menu__nav--delivery delivery">
+          <h1 class="menu__nav--delivery delivery">
             <a class="delivery__link" href="tel:+375291371010"
               ><span class="delivery__link--caption">Оформить доставку</span
               >+375 (29) 137 10 10</a
             >
-          </h2>
+          </h1>
         </div>
       </nav>
       <div class="container">
         <!-- ? //////////////PIZZA////////////// -->
         <div class="menu__category" id="pizza">
           <hr class="menu__category--line" />
-          <h3 class="menu__category--title">Pizza</h3>
+          <h1 class="menu__category--title">Pizza</h1>
           <hr class="menu__category--line" />
         </div>
         <div class="menu__box box">
@@ -397,14 +397,14 @@
           </div>
         </div>
       </div>
-      <!-- ! //////////////ИНГРИДИЕНТЫ/////////////// -->
+      <!-- ! .................Добавки к пицце................ -->
       <div class="menu__ingridients ingridients">
         <div class="container">
           <div class="menu__category ingridients__category" id="ingridients">
             <hr class="menu__category--line ingridients__category--line" />
-            <h3 class="menu__category--title ingridients__category--title">
-              Добавки_к_пицце
-            </h3>
+            <h1 class="menu__category--title ingridients__category--title">
+              Добавки к пицце
+            </h1>
             <hr class="menu__category--line ingridients__category--line" />
           </div>
           <div class="ingridients__box">
@@ -632,7 +632,7 @@
             />
           </div>
           <div class="ingridients__box">
-            <h1>Собери пиццу под себя!</h1>
+            <h2>Собери пиццу под себя!</h2>
           </div>
           <div class="ingridients__box">
             <div class="ingridients__box--wrapper wrapper">
@@ -651,9 +651,9 @@
           <!-- ! ...............СОУСЫ................ -->
           <div class="menu__category ingridients__category" id="ingridients">
             <hr class="menu__category--line ingridients__category--line" />
-            <h3 class="menu__category--title ingridients__category--title">
+            <h1 class="menu__category--title ingridients__category--title">
               Соусы
-            </h3>
+            </h1>
             <hr class="menu__category--line ingridients__category--line" />
           </div>
           <div class="ingridients__box">
@@ -746,7 +746,7 @@
       <div class="container">
         <div class="menu__category" id="burger">
           <hr class="menu__category--line" />
-          <h3 class="menu__category--title">Burger</h3>
+          <h1 class="menu__category--title">Burger</h1>
           <hr class="menu__category--line" />
         </div>
         <div class="menu__box box">
@@ -827,7 +827,7 @@
         <div class="container">
           <div class="menu__category lunch__category" id="lunch">
             <hr class="menu__category--line lunch__category--line" />
-            <h3 class="menu__category--title lunch__category--title">Lunch</h3>
+            <h1 class="menu__category--title lunch__category--title">Lunch</h1>
             <span class="lunch__category--caption">с 12:00 до 16:00</span>
             <hr class="menu__category--line lunch__category--line" />
           </div>
