--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <li class="list__link"><a href="#pizza">Пиццы</a></li>
           <li class="list__link"><a href="#burger">Бургеры</a></li>
           <li class="list__link"><a href="#lunch">Обеды</a></li>
-          <li class="list__link"><a href="#">Напитки</a></li>
-          <li class="list__link"><a href="#">Кухня</a></li>
+          <li class="list__link"><a href="#drinks">Напитки</a></li>
+          <li class="list__link"><a href="#kitchen">Кухня</a></li>
         </nav>
         <h1 class="nav--delivery delivery">
           <a class="delivery__link" href="tel:+375291371010"
@@ -50,9 +50,9 @@
         </h1>
       </div>
     </section>
+    <!-- ! ................ PIZZA ......................... -->
     <section class="pizza"  id="pizza">
-      <div class="container">
-        <!-- ! ............... PIZZA ................. -->
+      <div class="container pizza__container">
         <div class="category pizza__category">
           <hr class="category__line" />
           <h1 class="category__title">Pizza</h1>
@@ -241,7 +241,7 @@
             <img
               class="box__wrapper--pepper"
               src=".//img/vegan.png"
-              alt="острая"
+              alt="веганская"
             />
             <h3 class="box__wrapper--title">Капрезе</h3>
             <p class="box__wrapper--text">
@@ -306,7 +306,12 @@
               src="./img/mushroom.png"
               alt="pizza"
               class="box__wrapper--img"
-            />
+            /> 
+            <img
+            class="box__wrapper--pepper"
+            src=".//img/vegan.png"
+            alt="веганская"
+          />
             <h3 class="box__wrapper--title">Грибная</h3>
             <p class="box__wrapper--text">
               Шампиньоны, лук маринованный, соус Чесночный, сыр Моцарелла, соус
@@ -352,6 +357,11 @@
               src="./img/forchees.png"
               alt="pizza"
               class="box__wrapper--img"
+            />
+            <img
+              class="box__wrapper--pepper"
+              src=".//img/vegan.png"
+              alt="веганская"
             />
             <h3 class="box__wrapper--title">Четыре сыра</h3>
             <p class="box__wrapper--text">
@@ -627,7 +637,7 @@
             </div>
             <img
               class="ingridients__box--img"
-              src="./img/semga.png"
+              src="./img/filechicken.png"
               alt="ananas"
             />
           </div>
@@ -644,7 +654,7 @@
             </div>
             <img
               class="ingridients__box--img"
-              src="./img/ananas.png"
+              src="./img/semga.png"
               alt="ananas"
             />
           </div>
@@ -1085,6 +1095,410 @@
           </div>
         </div>
       </div>
+    </section>
+    <!-- ! ................ DRINKS ..................... -->
+    <section class="drinks" id="drinks">
+      <div class="container">
+        <div class="category">
+          <hr class="category__line" />
+          <h1 class="category__title">Напитки</h1>
+          <hr class="category__line" />
+        </div>
+        <div class="drinks__box box box__cold">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Coka-cola</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box box__cold">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/fanta.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Fanta</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box box__cold">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/sprite.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Sprite</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box box__cold">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/juice.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Сок</h3>
+            <p class="box__wrapper--text">
+              RICH в асортименте
+            </p>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">2 BYN</span>
+            <span>250 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box box__cold">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/water.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Bonaqua</h3>
+            <p class="box__wrapper--text">
+              Без газа / С газом 
+            </p>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">2 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <!-- ? .............. COFFE .............. -->
+        <div class="category">
+          <hr class="category__line" />
+          <h1 class="category__title">Кофе</h1>
+          <hr class="category__line" />
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Экспрессо</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">2,8 BYN</span>
+            <span>50 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/fanta.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Американо</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">2,8 BYN</span>
+            <span>120 г.</span>
+          </div>
+        </div>        
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/juice.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Капучино</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">4 BYN</span>
+            <span>120 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/water.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Латте</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">4,5 BYN</span>
+            <span>150 г.</span>
+          </div>
+        </div>
+        <!--  ? ............... TEA .............. -->
+        <div class="category">
+          <hr class="category__line" />
+          <h1 class="category__title">Чай</h1>
+          <hr class="category__line" />
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Черный листовой</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3,5 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Зеленый листовой</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3,5 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Зеленый порох</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3,5 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Зеленый Китайский жасмин</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3,5 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Зеленый Forget-me-not</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3,5 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Вишневая формула</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">4 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->
+            <h3 class="box__wrapper--title">Зеленый с мятой</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3,5 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        <div class="drinks__box box">
+          <div class="box__wrapper">
+            <!-- <img
+              src="./img/cola.png"
+              alt="pizza"
+              class="box__wrapper--img"
+            /> -->            
+            <!-- <span class="box__wrapper--new">Авторский</span> -->
+            <h3 class="box__wrapper--title">Облепиховый с апельсином</h3>
+          </div>
+          <div class="box__numbers">
+            <span class="box__numbers--cost">3,5 BYN</span>
+            <span>500 г.</span>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+    <!-- ! ................ KITCHEN .................... -->
+    <section class="kitchen" id="kitchen">
+      <div class="container">
+        <div class="category">
+          <hr class="category__line" />
+          <h1 class="category__title">Кухня</h1>
+          <hr class="category__line" />
+        </div>
+        <!-- ? ........... Закуски ................. -->
+        <h2 class="kitchen__title">Закуски</h2>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Оливье</h3>
+            <p class="item__text--info">
+              Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
+            </p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,50 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <!-- ?............... Салаты .................. -->        
+        <h2 class="kitchen__title">Салаты</h2>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+      </div>    
     </section>
     <script src="./js/scirpts.js"></script>
   </body>
