--- a/index.html
+++ b/index.html
@@ -36,11 +36,21 @@
     <section class="nav">
       <div class="container">
         <nav class="nav--list list">
-          <li class="list__link"><a href="#pizza">Пиццы</a></li>
-          <li class="list__link"><a href="#burger">Бургеры</a></li>
-          <li class="list__link"><a href="#lunch">Обеды</a></li>
-          <li class="list__link"><a href="#drinks">Напитки</a></li>
-          <li class="list__link"><a href="#kitchen">Кухня</a></li>
+          <li class="list__link"><a href="#pizza">
+            <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: -0.125em;" width="0.96em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 21"><path fill="currentColor" d="M7.5 9.006a.747.747 0 1 0 0-1.495a.747.747 0 0 0 0 1.495Zm3.723 1.253a.747.747 0 1 1-1.495 0a.747.747 0 0 1 1.495 0Zm-3.719 3.253a.751.751 0 1 0 0-1.502a.751.751 0 0 0 0 1.502ZM4 3.96c0-1.095.895-2.022 2.03-1.952c4.447.273 8.347 1.77 11.402 4.687c.867.827.696 2.178-.203 2.868a302.914 302.914 0 0 1-4.225 3.203v1.74c0 .717-.555 1.5-1.5 1.5a1.57 1.57 0 0 1-.498-.08v.083c0 .713-.556 1.491-1.503 1.491c-.754 0-1.251-.497-1.426-1.05c-.548.41-1.147.856-1.682 1.254c-.99.737-2.395.03-2.395-1.201V3.96Zm7.005 10.546c0 .259.195.5.499.5c.305 0 .5-.242.5-.5v-1.994a.5.5 0 0 1 .206-.404c.78-.566 2.108-1.575 3.284-2.474C12.801 7.07 9.026 5.549 5 5.518v10.985a.5.5 0 0 0 .798.4c.786-.586 1.713-1.276 2.409-1.798a.5.5 0 0 1 .8.4v.504c0 .246.19.492.496.492a.49.49 0 0 0 .502-.492v-1.503a.5.5 0 0 1 1 0Zm5.614-5.735c.465-.357.5-.993.122-1.354c-2.857-2.727-6.52-4.15-10.772-4.412C5.45 2.973 5 3.399 5 3.96v.558c4.327.033 8.402 1.687 11.297 4.5l.322-.247Z"/></svg>
+            Пиццы</a></li>
+          <li class="list__link"><a href="#burger">
+            <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: -0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 256"><path fill="currentColor" d="M48.8 104h158.4a16 16 0 0 0 15.6-19.4C215.5 49.5 175.6 24 128 24S40.5 49.5 33.2 84.6A16 16 0 0 0 48.8 104ZM128 40c39.4 0 73.4 20.6 79.2 47.9H48.8C54.6 60.6 88.6 40 128 40Zm97 112.6l-37 14.8l-37-14.8a7.8 7.8 0 0 0-6 0l-37 14.8l-37-14.8a7.8 7.8 0 0 0-6 0l-40 16a8 8 0 0 0 3 15.4a8 8 0 0 0 3-.6l9-3.6v4.2a40 40 0 0 0 40 40h96a40 40 0 0 0 40-40v-10.6l15-6a8 8 0 0 0-6-14.8ZM200 184a24.1 24.1 0 0 1-24 24H80a24.1 24.1 0 0 1-24-24v-10.6l12-4.8l37 14.8a7.8 7.8 0 0 0 6 0l37-14.8l37 14.8a7.8 7.8 0 0 0 6 0l9-3.6Zm40-56a8 8 0 0 1-8 8H24a8 8 0 0 1 0-16h208a8 8 0 0 1 8 8Z"/></svg>
+            Бургеры</a></li>
+          <li class="list__link"><a href="#lunch">
+            <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: -0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 19h18M3 11h18a8 8 0 0 1-8 8h-2a8 8 0 0 1-8-8zm6-3V5m3 0v3m3-3v3"/></svg>
+            Обеды</a></li>
+          <li class="list__link"><a href="#drinks">
+            <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: -0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path fill="currentColor" d="M25 11H15a1 1 0 0 0-1 1v4a6.005 6.005 0 0 0 5 5.91V28h-3v2h8v-2h-3v-6.09A6.005 6.005 0 0 0 26 16v-4a1 1 0 0 0-1-1Zm-1 5a4 4 0 0 1-8 0v-3h8Z"/><path fill="currentColor" d="M15 1h-5a1 1 0 0 0-1 1v7.37A6.09 6.09 0 0 0 6 15v14a1 1 0 0 0 1 1h5v-2H8V15c0-3.188 2.231-4.02 2.316-4.051L11 10.72V3h3v5h2V2a1 1 0 0 0-1-1Z"/></svg>          
+            Напитки</a></li>
+          <li class="list__link"><a href="#kitchen">
+            <svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: -0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path d="M15 8h2c.6 0 1-.4 1-1s-.4-1-1-1h-2c-.6 0-1 .4-1 1s.4 1 1 1zM29.9 20.5c-.2-.3-.6-.5-.9-.5h-1.1c-.5-4.4-4.1-8.8-8.7-10.2-2.1-.7-4.4-.7-6.5 0-4.5 1.4-8.2 5.8-8.6 10.2H3c-.3 0-.7.2-.9.5s-.2.7 0 1C3.5 24.3 6.3 26 9.5 26h13.1c3.1 0 6-1.7 7.4-4.6 0-.3 0-.6-.1-.9zm-16.6-8.8c1.7-.5 3.6-.5 5.3 0 3.7 1.1 6.8 4.7 7.3 8.3H6.1c.5-3.6 3.5-7.1 7.2-8.3zM22.5 24h-13c-1.8 0-3.4-.7-4.6-2h22.2c-1.2 1.3-2.8 2-4.6 2z" fill="#85282a" class="fill-000000"></path></svg></svg>
+            Кухня</a></li>
         </nav>
         <h1 class="nav--delivery delivery">
           <a class="delivery__link" href="tel:+375291371010"
@@ -1373,7 +1383,9 @@
           <hr class="category__line" />
         </div>
         <!-- ? ........... Закуски ................. -->
+        
         <h2 class="kitchen__title">Закуски</h2>
+        <img src="./img/96838147-continuous-line-drawing-of-chef-cooking-gourmet-meal-prepping-food-.webp" alt="">
         <div class="kitchen__item item">
           <div class="item__text">
             <h3 class="item__text__name">Салат Оливье</h3>
